--- a/estilo.css
+++ b/estilo.css
@@ -88,3 +88,18 @@ a {
     margin-top: 0px;
 }
 
+.irVolte{
+    font-size: 20px;
+    padding: 15px;
+    border: solid 2px  rgb(154, 6, 223);
+    border-radius: 10px;
+    height: 25px;
+    width: 25px;
+    margin: 10px;
+    text-align: center;
+}
+.bto{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
